# Quantamental

./: .env.sample  readme.md
ai services/: .gitignore  advisor.py  config.py  main.py  models.py  requirements.txt  routes.py  services.py  test.py
backend/: Dockerfile  go.mod  start.sh
backend/cmd/server/: main.go
backend/internal/handler/: base.go  calculus.go  distribution.go  finance_news.go  finance_news_client.go  finance_news_types.go  finmath.go  introduction.go  linear.go  optimization.go  routes.go  simulation.go  stats.go  timeseries.go  tools.go  types.go  validation.go
backend/internal/router/: router.go
cli/: .env.sample  Cargo.toml  clistart.sh
cli/src/: config.rs  main.rs  monitor.rs  types.rs  websocket.rs
docs/: refrences.md  services.md  techstack.md
docs/ai services/: Request.md
docs/backend/: Dockerun.md  Mathematical Tools API.md
docs/cli/: usage.md
docs/frontend/: run.md
frontend/: .dockerignore  Dockerfile  README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/clidash/: page.tsx
frontend/app/developerdash/: page.tsx
frontend/app/developertool/: page.tsx
frontend/app/financenews/: page.tsx
frontend/app/lysa/: page.tsx
frontend/app/mlaiservices/: page.tsx
frontend/components/: BackgroundGrid.tsx  featurecard.tsx  featuresection.tsx  footer.tsx  herosection.tsx  navbar.tsx
frontend/components/clidashboard/: Clidashboard.tsx
infra/: docker-compose.yaml
ml services/: .gitignore  main.py  requirements.txt
ml services/advisor/: model.py
tests/: .gitignore  readme.md  test.py  testcli.py
(+13 files in other folders)
